# agentic-governance-ledger

./: .env.example  .gitignore  DATA_GENERATION.md  DESIGN.md  DOMAIN_NOTES.md  README.md  pyproject.toml  requirements.txt
artifacts/: api_cost_report.txt  counterfactual_narr05.json  immutability_hashchain_report.txt  live_workflow_APEX-CLIENT-068-B478F9.json  narrative_test_results.txt  narratives_db_run_20260325T140532Z.json  narratives_db_run_20260325T142015Z.json  narratives_db_run_20260325T143107Z.json  narratives_db_run_20260325T153041Z.json  narratives_db_run_latest.json  occ_collision_report.txt  projection_lag_report.txt  regulatory_package_NARR05.json  test_results.txt
datagen/: generate_all.py
reports/: phase1.md  phase_1.md  phase_2.md  phase_3.md  starter_blueprint.md
scripts/: analyze_documents.py  build_final_report.ps1  demo_narr05.py  generate_api_cost_report.py  generate_narr05_artifacts.py  generate_projection_lag_report.py  generate_regulatory_package.py  publish_outbox.py  run_narratives_db.py  run_pipeline.py  run_what_if.py  ui_workflow.py
src/: __init__.py  event_store.py  outbox.py  schema.sql
tests/: conftest.py  test_agent_llm.py  test_agent_runtime_and_outbox.py  test_audit_ledger.py  test_concurrency.py  test_cost_reporting.py  test_demo_runtime.py  test_document_processing.py  test_event_store.py  test_gas_town.py  test_integrity.py  test_mcp_lifecycle.py  test_narratives.py  test_phase6.py  test_projection_seed_rebuild.py  test_projections.py  test_registry_client.py  test_submission_artifacts.py  test_upcasting.py
(+104 files in other folders)
