[project]
name = "the-ledger"
version = "0.1.0"
description = "Week 5 deliverable layout for The Ledger"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0,<0.32",
    "anthropic>=0.30.0,<0.90",
    "pydantic>=2.6.0,<3.0",
    "langgraph>=0.2.0,<2.0",
    "pdfplumber>=0.11.0,<0.12",
    "pypdf>=5.0.0,<6.0",
    "fastmcp>=0.9.0",
    "faker>=24.0.0,<26.0",
    "reportlab>=4.2.0,<5.0",
    "openpyxl>=3.1.0,<4.0",
    "python-dotenv>=1.0.0,<2.0",
    "pytest>=8.0.0,<10.0",
    "pytest-asyncio>=0.23.0,<2.0",
]

[project.optional-dependencies]
docling = [
    "docling>=2.0,<3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
